# nutcracker

./: .gitignore  README.md  cmds.txt  convert_rooms.bat  decode_san.py  decode_san_audio.py  decode_saud.py  encode_nut.py  fake_encode_san.py  funcutils.py  image.py  image_reader.py  nutcracker.py  pyproject.toml  setup.cfg  setup.py  test.bat
.github/workflows/: main.yml
chiper/: xor.py
codex/: bomb.py  codex37.py  rle.py
graphics/: grid.py
image/: grid.py
modules/: codex.py  gen.py  image.py  smush.py
res/: align.py  base.py  chunk.py  res_types.py
smush/: ahdr.py  anim.py  saud.py  smush.py  smush_types.py  smush_writer.py
sputm/: bpp_codec.py  char.py  encode_char.py  lecf.py  sputm.py  sputm_types.py  tlkb.py
src/nutcracker/: __init__.py  compress_san.py  decode_san.py  decode_san_audio.py  encode_nut.py  fake_encode_san.py  image.py  runner.py
src/nutcracker/chiper/: xor.py
src/nutcracker/codex/: base.py  bomb.py  bomp.py  bpp_codec.py  bpp_cost.py  codex.py  codex1.py  codex37.py  codex37_np.py  codex47.py  codex47_np.py  nutfont.py  rle.py  smap.py
src/nutcracker/core/: align.py  chunk.py  index.py  preset.py  resource.py  types.py
src/nutcracker/earwax/: older.py  older_room.py  older_sizeonly.py  preset.py  resource.py  room_older.py  windex_v3.py  windex_v3_older.py  windex_v4.py
src/nutcracker/graphics/: frame.py  grid.py  image.py
src/nutcracker/kernel/: align.py  buffer.py  chunk.py  element.py  helpers.py  index.py  iterchunk.py  preset.py  preset.pyi  resource.py  runner.py  settings.py  stream.py  structured.py  tree.py  types.py
src/nutcracker/res/: chunk.py
src/nutcracker/smush/: ahdr.py  anim.py  compress.py  decode.py  element.py  encode.py  encode_san_seq.py  fobj.py  index.py  preset.py  runner.py  saud.py  schema.py  smush.py  smush_types.py  structure.py  types.py
src/nutcracker/sputm/: akos.py  akos_old.py  bpp_codec.py  build.py  char.py  encode_char.py  encode_image.py  index.py  index2.py  lecf.py  orgroom.py  pproom.py  preset.py  proom.py  resource.py  room.py  runner.py  schema.py  scummtr.py  scummtr_he.py  scummtr_v5.py  sound.py  sputm.py  sputm_types.py  strings.py  tlkb.py  tree.py  types.py  windex.py  windex_v5.py  windex_v6.py
src/nutcracker/sputm/char/: decode.py  encode.py
src/nutcracker/sputm/costume/: akos.py  akos_encode.py  awiz.py  awiz_encode.py  banner.py  cost.py
src/nutcracker/sputm/room/: encode_image.py  orgroom.py  pproom.py  proom.py  runner.py
src/nutcracker/sputm/script/: bytecode.py  opcodes.py  opcodes_v5.py  parser.py  shared.py
src/nutcracker/sputm/windex/: runner.py  scu.py
src/nutcracker/sputm2/: build.py  resource.py  runner.py  strings.py  tree.py  types.py
src/nutcracker/sputm_old/: song.py  sound.py  tlkb.py  windex.py  windex_v5.py
src/nutcracker/utils/: copyio.py  fileio.py  funcutils.py  libio.py
tests/: test_nutcracker.py
utils/: copyio.py  funcutils.py
v2/: ahdr.py  bomb.py  codex.py  codex37.py  decode.py  decode_san.py  decode_san_audio.py  decode_saud.py  encode.py  fake_encode_san.py  fobj.py  image.py  image_reader.py  main.py  smush.py  smush_writer.py  structures.py  vocal.yml
