[tool.poetry]
name = "nutcracker"
version = "0.3.1415"
description = "Tools for editing resources in SCUMM games."
authors = ["BLooperZ <blooperz@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
keywords = ["scumm", "sputm", "smush", "lucasarts", "humongous"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.1"
parse = "^1.18.0"
Pillow = "^8.0.1"
typer = "^0.3.2"
PyYAML = "^5.4.1"
deal = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.6.4"
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"
nitpick = "^0.23.1"

[tool.poetry.urls]
repository = "https://github.com/blooperz/nutcracker"

[tool.poetry.scripts]
nutcracker = "nutcracker.runner:app"
smush = "nutcracker.smush.runner:app"

[tool.black]
skip-string-normalization = true

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/mypy.toml"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
