[tool.poetry]
name = "nutcracker"
version = "0.3.14159"
description = "Tools for editing resources in SCUMM games."
authors = ["BLooperZ <blooperz@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
keywords = ["scumm", "sputm", "smush", "lucasarts", "humongous"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.4"
parse = "^1.19.0"
Pillow = "^9.1.1"
typer = "^0.4.1"
PyYAML = "^6.0"
deal = "^4.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.10.1"
mypy = "^0.961"
flake8 = "^4.0.1"
black = "^22.3.0"
nitpick = "^0.32.0"
pyinstaller = "^5.1"

[tool.poetry.urls]
repository = "https://github.com/blooperz/nutcracker"

[tool.poetry.scripts]
nutcracker = "nutcracker.runner:app"
smush = "nutcracker.smush.runner:app"

[tool.black]
skip-string-normalization = true

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/mypy.toml"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
