[tool.poetry]
name = "nutcracker"
version = "0.3.141591"
description = "Tools for editing resources in SCUMM games."
authors = ["BLooperZ <blooperz@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
keywords = ["scumm", "sputm", "smush", "lucasarts", "humongous"]
repository = "https://github.com/blooperz/nutcracker"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.3"
parse = "^1.19.0"
Pillow = "^8.0.1"
typer = "^0.6.1"
PyYAML = "^6.0"
deal = "^4.23.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.8.0"
nitpick = "^0.32.0"
pyinstaller = "^6.2.0"
pip-licenses = "^3.5.4"

[tool.poetry.scripts]
nutcracker = "nutcracker.runner:app"
smush = "nutcracker.smush.runner:app"

[tool.black]
skip-string-normalization = true

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/mypy.toml"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
